<resources>
    <string name="app_name">WhereToGo</string>
    <string name="title_activity_where_to_go_maps">WhereToGoMaps</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="search_hint">Search for a place</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">settings</string>
</resources>
